--- a/Silverlight/Netsy.Favorites/FavoritesControl.xaml
+++ b/Silverlight/Netsy.Favorites/FavoritesControl.xaml
@@ -4,8 +4,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:Controls="clr-namespace:Netsy.Favorites.Controls" 
-    xmlns:ControlToolkit="clr-namespace:Microsoft.Windows.Controls;assembly=Microsoft.Windows.Controls"
-    mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480">
+    xmlns:ControlToolkit="clr-namespace:Microsoft.Windows.Controls;assembly=Microsoft.Windows.Controls" 
+    xmlns:Primitives="clr-namespace:System.Windows.Controls.Primitives"
+    mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="300">
   <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -24,7 +25,7 @@
                 </ListBox.ItemTemplate>
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <ControlToolkit:WrapPanel />
+                    <Primitives:UniformGrid Columns="{Binding ColumnCount}" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
         </ListBox>
