--- a/Silverlight/Netsy.Favorites/Controls/ListingSmall.xaml
+++ b/Silverlight/Netsy.Favorites/Controls/ListingSmall.xaml
@@ -1,17 +1,39 @@
 ﻿<UserControl x:Class="Netsy.Favorites.Controls.ListingSmall"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    Width="200">
-    
-    <StackPanel Orientation="Vertical" Margin="2,2,2,2">
-        <TextBlock FontWeight="Bold" Text="{Binding Listing.Title}" TextWrapping="Wrap"></TextBlock>
-            <Image Source="{Binding Listing.ImageUrl155X125}" HorizontalAlignment="Left" Stretch="None" />
-        <StackPanel Orientation="Horizontal" >
-            <TextBlock Text="{Binding PriceData}" ></TextBlock>
-            <TextBlock Text="Quantity" Margin="10 0 5 0"></TextBlock>
-            <TextBlock Text="{Binding Listing.Quantity}" ></TextBlock>
-        </StackPanel>
-        <TextBlock Text="{Binding Listing.UserName}" />
-        <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
-    </StackPanel>   
+    xmlns:ControlToolkit="clr-namespace:Microsoft.Windows.Controls;assembly=Microsoft.Windows.Controls"
+    MouseEnter="OnMouseEnter"
+    MouseLeave="OnMouseLeave">
+    <UserControl.Resources>
+        <Storyboard x:Key="controlEnter">
+            <DoubleAnimation Storyboard.TargetName="TextOverlay" Storyboard.TargetProperty="Opacity" 
+                To="1" Duration="0:0:1" />
+        </Storyboard>
+        <Storyboard x:Key="controlLeave">
+            <DoubleAnimation Storyboard.TargetName="TextOverlay" Storyboard.TargetProperty="Opacity" 
+                To="0" Duration="0:0:1" />
+        </Storyboard>
+        <Storyboard x:Key="pulse">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="TextOverlay" Storyboard.TargetProperty="Opacity" Duration="0:0:4">
+                <LinearDoubleKeyFrame Value="0" KeyTime="0:0:0" />
+                <LinearDoubleKeyFrame Value="1" KeyTime="0:0:1" />
+                <LinearDoubleKeyFrame Value="1" KeyTime="0:0:2" />
+                <LinearDoubleKeyFrame Value="0" KeyTime="0:0:4" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </UserControl.Resources>
+    <Grid>
+        <Image Source="{Binding Listing.ImageUrl155X125}" HorizontalAlignment="Left" Stretch="None" />
+        <ControlToolkit:DockPanel LastChildFill="False" x:Name="TextOverlay" Background="#88FFFFFF" Opacity="0">
+            <TextBlock ControlToolkit:DockPanel.Dock="Top" 
+                FontWeight="Bold" Text="{Binding Listing.Title}" TextWrapping="Wrap"></TextBlock>
+            <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap" ControlToolkit:DockPanel.Dock="Bottom" />
+            <TextBlock Text="{Binding Listing.UserName}" ControlToolkit:DockPanel.Dock="Bottom" />
+            <StackPanel Orientation="Horizontal" ControlToolkit:DockPanel.Dock="Bottom"  >
+                <TextBlock Text="{Binding PriceData}" ></TextBlock>
+                <TextBlock Text="Quantity" Margin="10 0 5 0"></TextBlock>
+                <TextBlock Text="{Binding Listing.Quantity}" ></TextBlock>
+            </StackPanel>
+        </ControlToolkit:DockPanel>
+    </Grid>
 </UserControl>
