--- a/Silverlight/Netsy.Favorites/Controls/ListingSmall.xaml
+++ b/Silverlight/Netsy.Favorites/Controls/ListingSmall.xaml
@@ -26,7 +26,7 @@
         <Image Source="{Binding Listing.ImageUrl155X125}" HorizontalAlignment="Left" Stretch="None" />
         <ControlToolkit:DockPanel LastChildFill="False" x:Name="TextOverlay" Background="#88FFFFFF" Opacity="0">
             <TextBlock ControlToolkit:DockPanel.Dock="Top" 
-                FontWeight="Bold" Text="{Binding Listing.Title}" TextWrapping="Wrap"></TextBlock>
+                FontWeight="Bold" Text="{Binding TitleWithLimit}" TextWrapping="Wrap"></TextBlock>
             <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap" ControlToolkit:DockPanel.Dock="Bottom" />
             <TextBlock Text="{Binding Listing.UserName}" ControlToolkit:DockPanel.Dock="Bottom" />
             <StackPanel Orientation="Horizontal" ControlToolkit:DockPanel.Dock="Bottom"  >
