--- a/Silverlight/Netsy.Favorites/App.xaml
+++ b/Silverlight/Netsy.Favorites/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             x:Class="Netsy.Favorites.App"
+             x:Class="Netsy.Listings.App"
              >
     <Application.Resources>
         
