--- a/Silverlight/Netsy.Favorites/ListingsControl.xaml
+++ b/Silverlight/Netsy.Favorites/ListingsControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Netsy.Favorites.ListingsControl"
+﻿<UserControl x:Class="Netsy.Listings.ListingsControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:Controls="clr-namespace:Netsy.Favorites.Controls" 
+    xmlns:Controls="clr-namespace:Netsy.Listings.Controls" 
     xmlns:ControlToolkit="clr-namespace:Microsoft.Windows.Controls;assembly=Microsoft.Windows.Controls" 
     MouseEnter="OnMouseEnter"
     MouseLeave="OnMouseLeave"
