--- a/DemoWebsite/Views/Shared/Site.Master
+++ b/DemoWebsite/Views/Shared/Site.Master
@@ -14,11 +14,11 @@
             </div>              
             <div id="menucontainer">
                 <ul id="menu">              
-                    <li><%= Html.ActionLink("Home", "Index", "Home")%></li>
+                    <li><%= Html.ActionLink("Home", "Index")%></li>
+                    <li><%= Html.ActionLink("Category Demo", "Category")%></li>
                     <li><a href="http://github.com/AnthonySteele/Netsy/">Netsy on GitHub</a></li>
                     <li><a href="http://developer.etsy.com/">Etsy Developer</a></li>
                 </ul>
-            
             </div>
         </div>
         <div id="main">
