--- a/DemoWebsite/Views/Shared/Site.Master
+++ b/DemoWebsite/Views/Shared/Site.Master
@@ -3,6 +3,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <title>Netsy</title>
     <link href="/Content/Site.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -14,14 +15,23 @@
             </div>              
             <div id="menucontainer">
                 <ul id="menu">              
-                    <li><%= Html.ActionLink("Home", "Index")%></li>
-                    <li><%= Html.ActionLink("Category Demo", "Category")%></li>
                     <li><a href="http://github.com/AnthonySteele/Netsy/">Netsy on GitHub</a></li>
                     <li><a href="http://developer.etsy.com/">Etsy Developer</a></li>
                 </ul>
             </div>
         </div>
         <div id="main">
+
+            <asp:ContentPlaceHolder ID="TopText" runat="server" />
+
+            <div id="submenucontainer">
+                <ul id="submenu">              
+                    <li><%= Html.ActionLink("Front page", "Front")%></li>
+                    <li><%= Html.ActionLink("Category", "Category")%></li>
+                    <li><%= Html.ActionLink("Color", "Color")%></li>
+                </ul>
+            </div>
+            
             <asp:ContentPlaceHolder ID="MainContent" runat="server" />
             <div id="footer">
             </div>
