--- a/DemoWebsite/Views/Shared/Site.Master
+++ b/DemoWebsite/Views/Shared/Site.Master
@@ -30,6 +30,8 @@
                     <li><%= Html.ActionLink("Front page", "Front")%></li>
                     <li><%= Html.ActionLink("Category", "Category")%></li>
                     <li><%= Html.ActionLink("Color", "Color")%></li>
+                    <li><%= Html.ActionLink("Shop", "Shop")%></li>
+                    <li><%= Html.ActionLink("Favorites", "Favorites")%></li>
                     <li><%= Html.ActionLink("Sizes", "Sizes")%></li>
                 </ul>
             </div>
