--- a/Silverlight/Netsy.Shop/ShopControl.xaml
+++ b/Silverlight/Netsy.Shop/ShopControl.xaml
@@ -2,11 +2,26 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:Controls="clr-namespace:Netsy.Shop.Controls" mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="400">
     <StackPanel Orientation="Vertical">
         <Image Source="{Binding BannerImageUrl}" HorizontalAlignment="Center" Stretch="None" />
+        <ListBox BorderThickness="0" Background="Transparent"
+        ItemsSource="{Binding Listings}" 
+        ScrollViewer.HorizontalScrollBarVisibility="Auto"
+        ScrollViewer.VerticalScrollBarVisibility="Disabled">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Controls:ShopListing />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal" Background="Transparent"/>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+        </ListBox>
 
     </StackPanel>
 </UserControl>
